Actions
Bug #9797
closedMath::log - missing domain error check
Bug #9797:
Math::log - missing domain error check
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.2.0dev (2014-05-03) [x64-mswin64_120]
Backport:
Updated by nobu (Nobuyoshi Nakada) over 12 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
Applied in changeset r45795.
math.c: check domain of base argument
- math.c (math_log): check domain of base argument too. raises
Math::DomainError instead of returning NaN if the base is less
than 0, and returns NaN instead of -infinity if both of two
arguments are 0. [ruby-core:62309] [Bug #9797]
Updated by usa (Usaku NAKAMURA) about 12 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN to 2.0.0: WONTFIX, 2.1: UNKNOWN
Updated by nagachika (Tomoyuki Chikanaga) about 12 years ago
- Backport changed from 2.0.0: WONTFIX, 2.1: UNKNOWN to 2.0.0: WONTFIX, 2.1: WONTFIX
Actions